--- a/arch/arm64/configs/sdm845-perf_defconfig
+++ b/arch/arm64/configs/sdm845-perf_defconfig
@@ -464,7 +464,6 @@ CONFIG_ION=y
 CONFIG_ION_MSM=y
 CONFIG_QCA_CLD_WLAN=y
 CONFIG_QCACLD_WLAN_LFR3=y
-CONFIG_PRIMA_WLAN_OKC=y
 CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
 CONFIG_WLAN_FEATURE_11W=y
 CONFIG_WLAN_FEATURE_LPSS=y
@@ -485,6 +484,9 @@ CONFIG_MCC_TO_SCC_SWITCH=y
 CONFIG_QCACLD_WLAN_LFR2=y
 CONFIG_WLAN_FEATURE_DISA=y
 CONFIG_WLAN_FEATURE_FILS=y
+CONFIG_WLAN_FEATURE_OWE=y
+CONFIG_WLAN_FEATURE_GMAC=y
+CONFIG_WLAN_FEATURE_SAE=y
 CONFIG_QCACLD_FEATURE_METERING=y
 CONFIG_GSI=y
 CONFIG_IPA3=y
